--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -219,33 +219,23 @@
         android:layout_height="match_parent"
         android:layout_gravity="bottom">
 
-        <RelativeLayout
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_gravity="bottom|center"
             android:background="#ebe5e5"
-            android:gravity="center_horizontal|center_vertical">
+            android:gravity="center_horizontal|center_vertical"
+            android:orientation="horizontal">
 
             <TextView
 
                 android:id="@+id/dont_have_account_textview"
-                android:layout_width="150dp"
-                android:layout_height="match_parent"
-                android:gravity="center|right"
-                android:layout_marginLeft="36dp"
-                android:layout_alignParentLeft="true"
-                android:text="@string/dont_have_an_account" />
-
-            <TextView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginRight="36dp"
-                android:gravity="center|left"
-                android:text="@string/sign_up"
-                android:layout_toRightOf="@+id/dont_have_account_textview"
-                android:textStyle="bold"/>
+                android:gravity="center"
+                android:text="@string/dont_have_an_account" />
 
-        </RelativeLayout>
+        </LinearLayout>
 
     </LinearLayout>
 </LinearLayout>
