bottom navigation view pager added

--- a/app/src/main/res/layout/fragment_one.xml
+++ b/app/src/main/res/layout/fragment_one.xml
@@ -2,12 +2,13 @@
 xmlns:tools="http://schemas.android.com/tools"
 android:layout_width="match_parent"
 android:layout_height="match_parent"
-tools:context="info.androidhive.materialtabs.fragments.OneFragment">
+tools:context="com.example.onur.loginexample.MainActivity">
+
 
 <TextView
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:text="@string/one"
+    android:text="one"
     android:textSize="40dp"
     android:textStyle="bold"
     android:layout_centerInParent="true"/>
