bottom navigation view pager added

--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -5,7 +5,7 @@
     android:gravity="center_horizontal"
     android:orientation="vertical"
     android:background="#eeeeee"
-    tools:context="com.example.onur.loginexample.SignUp">
+    tools:context="com.example.onur.loginexample.activity.SignUpActivity">
 
 
     <LinearLayout
