--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,7 +6,7 @@
     android:gravity="center_horizontal"
     android:orientation="vertical"
     android:background="#eeeeee"
-    tools:context="com.example.onur.loginexample.LoginActivity">
+    tools:context="com.example.onur.loginexample.activity.LoginActivity">
 
 
     <LinearLayout
