profile page designed

--- a/app/src/main/res/layout/contact_item.xml
+++ b/app/src/main/res/layout/contact_item.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -12,7 +13,7 @@
         android:layout_centerVertical="true"
         android:layout_marginEnd="@dimen/activity_horizontal_margin"
         android:layout_marginRight="@dimen/activity_horizontal_margin"
-        android:src="@drawable/ic_phone_black" />
+        app:srcCompat="@drawable/ic_phone_black" />
 
     <TextView
         android:id="@+id/tvNumber"
@@ -37,12 +38,5 @@
         android:text="Mobile"
         android:textAppearance="@style/TextAppearance.AppCompat.Small" />
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_centerVertical="true"
-        android:src="@drawable/ic_favorite_black" />
 
 </RelativeLayout>
