--- a/app/src/main/res/layout/fragment_one.xml
+++ b/app/src/main/res/layout/fragment_one.xml
@@ -2,7 +2,7 @@
 xmlns:tools="http://schemas.android.com/tools"
 android:layout_width="match_parent"
 android:layout_height="match_parent"
-tools:context="com.example.onur.loginexample.activity.MainActivity">
+tools:context="com.project.onur.playerx.activity.MainActivity">
 
 
 <TextView
