--- a/app/src/main/res/layout/fragment_two.xml
+++ b/app/src/main/res/layout/fragment_two.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.onur.loginexample.fragment.TwoFragment">
+    tools:context="com.project.onur.playerx.fragment.TwoFragment">
 
     <TextView
         android:layout_width="wrap_content"
