--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,12 +1,14 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:id="@+id/login_lineer_layout"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:gravity="center_horizontal"
     android:orientation="vertical"
     android:background="#eeeeee"
     tools:context="com.project.onur.playerx.activity.LoginActivity">
+
 
 
     <LinearLayout
@@ -75,6 +77,7 @@
             android:textStyle="bold" />
 
     </LinearLayout>
+
 
     <LinearLayout
         android:id="@+id/login_form_bottom"
@@ -213,8 +216,8 @@
 
 
 </LinearLayout>
-
     <LinearLayout
+        android:id="@+id/bottom_bar"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="bottom">
