--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -1,5 +1,6 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/sign_up_lineer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center_horizontal"
@@ -7,6 +8,11 @@
     android:background="#eeeeee"
     tools:context="com.project.onur.playerx.activity.SignUpActivity">
 
+    <ScrollView
+        android:id="@+id/login_form"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:fillViewport="false">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -31,7 +37,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <AutoCompleteTextView
+            <EditText
                 android:id="@+id/fullname"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -39,6 +45,7 @@
                 android:layout_marginRight="20dp"
                 android:hint="@string/fullname"
                 android:inputType="text"
+                android:nextFocusDown="@+id/email"
                 android:maxLines="1" />
 
         </android.support.design.widget.TextInputLayout>
@@ -55,6 +62,7 @@
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp"
                 android:hint="@string/prompt_email"
+                android:nextFocusDown="@+id/password"
                 android:inputType="textEmailAddress"
                 android:maxLines="1" />
 
@@ -72,7 +80,7 @@
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp"
                 android:hint="@string/prompt_password"
-                android:imeActionId="@+id/login"
+                android:imeActionId="@+id/register"
                 android:imeActionLabel="@string/action_sign_in_short"
                 android:imeOptions="actionUnspecified"
                 android:inputType="textPassword"
@@ -96,6 +104,7 @@
 
 
     </LinearLayout>
+    </ScrollView>
 
     <LinearLayout
         android:layout_width="match_parent"
