--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -139,6 +139,7 @@
             android:visibility="gone"/>
         <LinearLayout
             android:id="@+id/linearButton2"
+            android:clickable="true"
             android:layout_width="match_parent"
             android:layout_height="35dp"
             android:background="@drawable/google_sign_button"
@@ -155,7 +156,7 @@
                 app:civ_border_width="3dp"
                 app:civ_border_color="#FFFFFF"/>
             <TextView
-                android:id="@+id/gogle"
+                android:id="@+id/google"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_centerInParent="true"
