--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -14,4 +14,13 @@
         <item name="android:layout_marginBottom">10dp</item>
         <item name="android:layout_gravity">center_horizontal</item>
     </style>
+
+    <style name="FacebookLoginButton">
+    <item name="android:textSize">12sp</item>
+    <item name="android:background">@drawable/facebook_button_style</item>
+    <item name="android:layout_marginTop">10dp</item>
+    <item name="android:layout_marginBottom">10dp</item>
+    <item name="android:layout_gravity">center_horizontal</item>
+</style>
+
 </resources>
