--- a/app/src/main/res/layout/fragment_one.xml
+++ b/app/src/main/res/layout/fragment_one.xml
@@ -4,10 +4,14 @@ android:layout_width="match_parent"
 android:layout_height="match_parent"
 tools:context="com.project.onur.playerx.activity.MainActivity">
 
+
+    <include layout="@layout/toolbar" />
+
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/scrollView_layout"
+        android:layout_marginTop="?attr/actionBarSize"
         android:orientation="horizontal">
 
         <HorizontalScrollView
