--- a/app/src/main/res/layout/fragment_create_event.xml
+++ b/app/src/main/res/layout/fragment_create_event.xml
@@ -98,6 +98,7 @@
                     android:layout_gravity="center_vertical"/>
 
                 <TextView
+                    android:id="@+id/location_text"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Konum Ekle"
